--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1566,6 +1566,227 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "2bd2c728",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>km_Driven</th>\n",
+       "      <th>Fuel_Type</th>\n",
+       "      <th>Owner_Type</th>\n",
+       "      <th>Engine CC</th>\n",
+       "      <th>Power(bhp)</th>\n",
+       "      <th>Seats</th>\n",
+       "      <th>Mileage Km/L</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>No of Years</th>\n",
+       "      <th>Transmission_Manual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>km_Driven</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.258689</td>\n",
+       "      <td>0.241865</td>\n",
+       "      <td>0.219807</td>\n",
+       "      <td>0.029170</td>\n",
+       "      <td>0.237426</td>\n",
+       "      <td>-0.171930</td>\n",
+       "      <td>-0.174329</td>\n",
+       "      <td>0.500191</td>\n",
+       "      <td>0.116798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fuel_Type</th>\n",
+       "      <td>-0.258689</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.035764</td>\n",
+       "      <td>-0.459853</td>\n",
+       "      <td>-0.327096</td>\n",
+       "      <td>-0.298060</td>\n",
+       "      <td>-0.144955</td>\n",
+       "      <td>-0.343591</td>\n",
+       "      <td>0.111059</td>\n",
+       "      <td>0.121072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Owner_Type</th>\n",
+       "      <td>0.241865</td>\n",
+       "      <td>0.035764</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.056192</td>\n",
+       "      <td>0.020775</td>\n",
+       "      <td>0.007815</td>\n",
+       "      <td>-0.153310</td>\n",
+       "      <td>-0.104716</td>\n",
+       "      <td>0.380186</td>\n",
+       "      <td>0.002630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Engine CC</th>\n",
+       "      <td>0.219807</td>\n",
+       "      <td>-0.459853</td>\n",
+       "      <td>0.056192</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.844655</td>\n",
+       "      <td>0.481378</td>\n",
+       "      <td>-0.638243</td>\n",
+       "      <td>0.631834</td>\n",
+       "      <td>0.057110</td>\n",
+       "      <td>-0.477020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Power(bhp)</th>\n",
+       "      <td>0.029170</td>\n",
+       "      <td>-0.327096</td>\n",
+       "      <td>0.020775</td>\n",
+       "      <td>0.844655</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.166858</td>\n",
+       "      <td>-0.538670</td>\n",
+       "      <td>0.774096</td>\n",
+       "      <td>-0.041132</td>\n",
+       "      <td>-0.655844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Seats</th>\n",
+       "      <td>0.237426</td>\n",
+       "      <td>-0.298060</td>\n",
+       "      <td>0.007815</td>\n",
+       "      <td>0.481378</td>\n",
+       "      <td>0.166858</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.369742</td>\n",
+       "      <td>0.109407</td>\n",
+       "      <td>-0.010531</td>\n",
+       "      <td>0.070983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mileage Km/L</th>\n",
+       "      <td>-0.171930</td>\n",
+       "      <td>-0.144955</td>\n",
+       "      <td>-0.153310</td>\n",
+       "      <td>-0.638243</td>\n",
+       "      <td>-0.538670</td>\n",
+       "      <td>-0.369742</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.310967</td>\n",
+       "      <td>-0.302047</td>\n",
+       "      <td>0.340536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Price</th>\n",
+       "      <td>-0.174329</td>\n",
+       "      <td>-0.343591</td>\n",
+       "      <td>-0.104716</td>\n",
+       "      <td>0.631834</td>\n",
+       "      <td>0.774096</td>\n",
+       "      <td>0.109407</td>\n",
+       "      <td>-0.310967</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.328458</td>\n",
+       "      <td>-0.594903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>No of Years</th>\n",
+       "      <td>0.500191</td>\n",
+       "      <td>0.111059</td>\n",
+       "      <td>0.380186</td>\n",
+       "      <td>0.057110</td>\n",
+       "      <td>-0.041132</td>\n",
+       "      <td>-0.010531</td>\n",
+       "      <td>-0.302047</td>\n",
+       "      <td>-0.328458</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.092821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Transmission_Manual</th>\n",
+       "      <td>0.116798</td>\n",
+       "      <td>0.121072</td>\n",
+       "      <td>0.002630</td>\n",
+       "      <td>-0.477020</td>\n",
+       "      <td>-0.655844</td>\n",
+       "      <td>0.070983</td>\n",
+       "      <td>0.340536</td>\n",
+       "      <td>-0.594903</td>\n",
+       "      <td>0.092821</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     km_Driven  Fuel_Type  Owner_Type  Engine CC  Power(bhp)  \\\n",
+       "km_Driven             1.000000  -0.258689    0.241865   0.219807    0.029170   \n",
+       "Fuel_Type            -0.258689   1.000000    0.035764  -0.459853   -0.327096   \n",
+       "Owner_Type            0.241865   0.035764    1.000000   0.056192    0.020775   \n",
+       "Engine CC             0.219807  -0.459853    0.056192   1.000000    0.844655   \n",
+       "Power(bhp)            0.029170  -0.327096    0.020775   0.844655    1.000000   \n",
+       "Seats                 0.237426  -0.298060    0.007815   0.481378    0.166858   \n",
+       "Mileage Km/L         -0.171930  -0.144955   -0.153310  -0.638243   -0.538670   \n",
+       "Price                -0.174329  -0.343591   -0.104716   0.631834    0.774096   \n",
+       "No of Years           0.500191   0.111059    0.380186   0.057110   -0.041132   \n",
+       "Transmission_Manual   0.116798   0.121072    0.002630  -0.477020   -0.655844   \n",
+       "\n",
+       "                        Seats  Mileage Km/L     Price  No of Years  \\\n",
+       "km_Driven            0.237426     -0.171930 -0.174329     0.500191   \n",
+       "Fuel_Type           -0.298060     -0.144955 -0.343591     0.111059   \n",
+       "Owner_Type           0.007815     -0.153310 -0.104716     0.380186   \n",
+       "Engine CC            0.481378     -0.638243  0.631834     0.057110   \n",
+       "Power(bhp)           0.166858     -0.538670  0.774096    -0.041132   \n",
+       "Seats                1.000000     -0.369742  0.109407    -0.010531   \n",
+       "Mileage Km/L        -0.369742      1.000000 -0.310967    -0.302047   \n",
+       "Price                0.109407     -0.310967  1.000000    -0.328458   \n",
+       "No of Years         -0.010531     -0.302047 -0.328458     1.000000   \n",
+       "Transmission_Manual  0.070983      0.340536 -0.594903     0.092821   \n",
+       "\n",
+       "                     Transmission_Manual  \n",
+       "km_Driven                       0.116798  \n",
+       "Fuel_Type                       0.121072  \n",
+       "Owner_Type                      0.002630  \n",
+       "Engine CC                      -0.477020  \n",
+       "Power(bhp)                     -0.655844  \n",
+       "Seats                           0.070983  \n",
+       "Mileage Km/L                    0.340536  \n",
+       "Price                          -0.594903  \n",
+       "No of Years                     0.092821  \n",
+       "Transmission_Manual             1.000000  "
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_data.corr()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bea25d12",
    "metadata": {},
@@ -1640,7 +1861,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x2f761f812e8>"
+       "<seaborn.axisgrid.PairGrid at 0x17dd29ad3c8>"
       ]
      },
      "execution_count": 27,
@@ -4001,7 +4222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 57,
    "id": "65980352",
    "metadata": {},
    "outputs": [
@@ -4019,7 +4240,7 @@
        "Name: Price, dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4734,7 +4955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 71,
    "id": "68107d15",
    "metadata": {},
    "outputs": [],
@@ -4746,7 +4967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "423032af",
    "metadata": {},
    "outputs": [],
